<resources>
    <string name="app_name">FlagQuiz</string>
    <string name="app_name1">Flag Quiz</string>
    <string name="name_hint">Name</string>
    <string name="greeting">Welcome</string>
    <string name="name_instructions">Please enter your name:</string>
    <string name="start">START</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">FINISH</string>
    <string name="result">RESULT</string>
    <string name="congtrats">Congratulations</string>
    <string name="flag_image">Flag Image</string>
    <string name="trophy_image">Trophy Image</string>
</resources>